Formatted graph legends to be less likely to overlap, changed the lead engagements legend terminology and fixed some issues with reports where tables extended beyond their borders.

--- a/app/bundles/CoreBundle/Assets/css/app/less/components/graphs.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/graphs.less
@@ -10,8 +10,8 @@
     position: relative;
     margin-bottom: 4px;
     border-radius: 5px;
-    padding: 2px 8px 2px 28px;
-    font-size: 14px;
+    padding: 0px 8px 2px 18px;
+    font-size: 11px;
     cursor: default;
     -webkit-transition: background-color 200ms ease-in-out;
     -moz-transition: background-color 200ms ease-in-out;
@@ -25,8 +25,8 @@
       position: absolute;
       left: 0;
       top: 0;
-      width: 20px;
-      height: 100%;
+      width: 15px;
+      height: 15px;
       border-radius: 5px;
     }
   }
